objects/Echo_History_Notification_Status__c.object
<CustomObject>
    <description>What it Does? stores historical record of Echo Notifications
Downstream Impact? None
Which department is owner? Customer Care</description>
    <fields>
        <fullName>Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Echo_History_Notification_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Time_Completed__c</fullName>
        <label>Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HTML_Email__c</fullName>
        <label>HTML Email</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Invalid_Response__c</fullName>
        <label>Invalid Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Total_Emails__c</fullName>
        <label>Total Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Echo History Notification Status</label>
    <nameField>
        <label>Echo History Notification Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Echo History Notification Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>